--- a/src/app.css
+++ b/src/app.css
@@ -2,12 +2,36 @@
 @tailwind components;
 @tailwind utilities;
 
-section h1 {
+body{
+  @apply bg-purple-900 from-purple-500 bg-gradient-to-b bg-fixed;
+  height: 100%;
+}
+
+footer > p {
+  @apply container mx-auto;
+}
+main{
+  padding-bottom: 100px;
+  padding-top: 100px;
+  @apply grid gap-4 justify-items-center w-full grid-cols-1;
+}
+footer {
+  border-top: 1px solid #ccc;
+  padding: 5px 20px;
+  position: fixed;
+  bottom: 0;
+  left:0;
+  right:0;
+  background-color: rgba(255,255,255,0.9);
+  backdrop-filter: blur();
+}
+
+h1 {
   @apply text-4xl p-2 text-center;
 }
 
 p {
-  @apply p-3 text-sm md:text-base;
+  @apply p-3;
 }
 
 .button {
@@ -96,9 +120,14 @@ p {
 }
 
 .box {
-  @apply border border-blue-100 rounded-md mb-3 mx-3;
+  @apply border border-purple-200 rounded-xl bg-white text-xl w-full flex-1 self-center;
+  max-width: 500px;
+}
+
+.box > div{
+  @apply p-6;
 }
 
 .box > .header {
-  @apply text-xl bg-blue-100 px-3 py-1;
+  @apply text-xl text-center p-6 bg-purple-200 rounded-t-xl;
 }
