--- a/src/app.css
+++ b/src/app.css
@@ -3,8 +3,6 @@
 @tailwind utilities;
 
 body{
-  @apply bg-purple-900 from-purple-500 bg-gradient-to-b bg-fixed;
-  height: 100%;
 }
 
 footer > p {
@@ -13,7 +11,15 @@ footer > p {
 main{
   padding-bottom: 100px;
   padding-top: 100px;
-  @apply grid gap-4 justify-items-center w-full grid-cols-1;
+  @apply grid gap-4 justify-items-center w-full grid-cols-1 fixed;
+  top: 0;
+  bottom: 0;
+  left:0;
+  right:0;
+  background: linear-gradient(180deg, #FFB7B7 0%, #727272 100%), radial-gradient(60.91% 100% at 50% 0%, #FFD1D1 0%, #260000 100%), linear-gradient(238.72deg, #FFDDDD 0%, #720066 100%), linear-gradient(127.43deg, #00FFFF 0%, #FF4444 100%), radial-gradient(100.22% 100% at 70.57% 0%, #FF0000 0%, #00FFE0 100%), linear-gradient(127.43deg, #B7D500 0%, #3300FF 100%);
+  background-blend-mode: screen, overlay, hard-light, color-burn, color-dodge, normal;
+ 
+  overflow: scroll;
 }
 footer {
   border-top: 1px solid #ccc;
@@ -120,7 +126,7 @@ p {
 }
 
 .box {
-  @apply border border-purple-200 rounded-xl bg-white text-xl w-full flex-1 self-center;
+  @apply border border-slate-100 rounded-xl bg-white text-xl w-full flex-1 self-center;
   max-width: 500px;
 }
 
@@ -129,5 +135,5 @@ p {
 }
 
 .box > .header {
-  @apply text-xl text-center p-6 bg-purple-200 rounded-t-xl;
+  @apply text-xl text-center p-6 bg-slate-100 rounded-t-xl;
 }
