trying to fix safari date issue

--- a/src/app.css
+++ b/src/app.css
@@ -142,3 +142,10 @@ p {
 .box > .header {
     @apply text-xl text-center p-6 bg-slate-900 text-white ;
 }
+
+input[type="date"] {
+    display: block;
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    min-height: 1.2em;
+}
