moving to vite for sveltekit

--- a/src/app.css
+++ b/src/app.css
@@ -19,11 +19,12 @@ footer > p {
 main {
     padding-bottom: 100px;
     padding-top: 100px;
-    @apply grid gap-4 justify-items-center w-full grid-cols-1;
+    @apply container mx-auto;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    max-width: 600px;
 }
 
 footer {
@@ -132,7 +133,6 @@ p {
 
 .box {
     @apply rounded-xl bg-white text-xl w-full flex-1 self-center;
-    max-width: 500px;
 }
 
 .box > div {
@@ -145,6 +145,7 @@ p {
 
 input[type="date"] {
     display: flex;
+    appearance: textfield;
     -webkit-appearance: textfield;
     -moz-appearance: textfield;
     min-height: 1.2em;
