--- a/src/app.css
+++ b/src/app.css
@@ -9,10 +9,8 @@ main {
 }
 
 body {
-	background: linear-gradient(180deg, #ffb7b7 0%, #727272 100%), radial-gradient(60.91% 100% at 50% 0%, #ffd1d1 0%, #260000 100%),
-		linear-gradient(238.72deg, #ffdddd 0%, #720066 100%), linear-gradient(127.43deg, #00ffff 0%, #ff4444 100%), radial-gradient(100.22% 100% at 70.57% 0%, #ff0000 0%, #00ffe0 100%),
-		linear-gradient(127.43deg, #b7d500 0%, #3300ff 100%);
-	background-blend-mode: screen, overlay, hard-light, color-burn, color-dodge, normal;
+	background: linear-gradient(180deg,#6c1280 0%,  #041434 100%);
+	background-blend-mode: screen;
 	background-attachment: fixed;
 }
 
