--- a/src/app.css
+++ b/src/app.css
@@ -42,7 +42,7 @@ p {
 }
 
 .button {
-	@apply bg-blue-500 text-base px-6 py-2 flex justify-center rounded-md text-white hover:bg-blue-800;
+	@apply bg-blue-500 text-base px-6 py-2 flex justify-center rounded-md text-white hover:bg-blue-800 cursor-pointer;
 }
 
 .button.green {
