--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@ main {
 
 body {
 	background-blend-mode: screen;
-	background: linear-gradient(180deg, #6c1280 0%, #041434 100%) fixed;
+	background: linear-gradient(180deg, #6c1280 0%, #112a5a 100%) fixed;
 }
 
 footer > p {
